# CrossPA

Common/: BuildInstructions.txt  CMakeLists.txt  SetWorkspace.bat
Common/CommandScripts/LinuxTools/: BuildCommon.sh  BuildCylon.sh  BuildLinux.sh  SetCylonEnv.sh  SetEnvCommon.sh  SetEnvCrossCompileCylon.sh  SetEnvCrossCompileLinux.sh  SetLinuxEnv.sh  environment-setup-Cylon.sh
Common/CommandScripts/WinTools/: Build_All.bat  CompileProto.bat  MakeSolution.bat  SetCommonEnv.bat
Common/source/: CMakeInclude.txt  CMakeLists.txt  project.vcxproj.user.in
Common/source/Product/CommonUtils/: ArgumentParser.cpp  CMakeLists.txt  HandleSignals.cpp  StringUtils.cpp  TimedThread.cpp  WorkerThread.cpp  stdafx.h
Common/source/Product/CommonUtils/include/: ArgumentParser.h  CountdownTimer.h  HandleSignals.h  SafeQueue.h  SharedFromThis.h  SignalConnection.h  StringUtils.h  TimedThread.h  WorkerThread.h
Common/source/Product/Logger/: CMakeLists.txt  Logger.cpp  stdafx.h
Common/source/Product/Logger/include/: LogLevels.h  Logger.h
Common/source/Tests/: CMakeLists.txt
Common/source/Tests/CommonUtils_Test/: ArgumentParserTests.cpp  CMakeLists.txt  CountdownTimerTests.cpp  SafeQueueTests.cpp  SignalConnectionTests.cpp  StringUtilsTests.cpp  TimedThreadDerived.h  TimedThreadTests.cpp  WorkerThreadDerived.h  WorkerThreadTests.cpp  main.cpp
Common/source/Tests/Logger_Test/: CMakeLists.txt  LoggerTests.cpp  main.cpp
MessagingService/: BuildInstructions.txt  CMakeLists.txt  SetWorkspace.bat
MessagingService/CommandScripts/LinuxTools/: BuildApp.sh  BuildCylon.sh  BuildLinux.sh  RunTests.sh  SetAppEnv.sh  SetCylonEnv.sh  SetLinuxEnv.sh
MessagingService/CommandScripts/WinTools/: Build_All.bat  Build_Min.bat  CompileProtoMessages.bat  MakeSolution.bat  SetAppEnv.bat  httpd.conf
MessagingService/source/: CMakeLists.txt
MessagingService/source/CSharp/: TestApp_CS.sln
MessagingService/source/CSharp/Product/CommonMessages/: ClientTypes.cs  CommonMessages.cs  MsgService.CommonMessages.csproj  app.config  packages.config
MessagingService/source/CSharp/Product/CommonMessages/Properties/: AssemblyInfo.cs
MessagingService/source/CSharp/Product/CommunicationUtils/: ClientComm.cs  ClientContext.cs  ClientContextInterface.cs  ConnectionHandler.cs  MsgService.CommunicationUtils.csproj  MsgStore.cs  SubscriberMessageLists.cs  app.config
MessagingService/source/CSharp/Product/CommunicationUtils/Properties/: AssemblyInfo.cs
MessagingService/source/CSharp/Release/: Matrix.Utilities.Diagnostics.XML
MessagingService/source/CSharp/Tests/CommunicationUtils.Test/: ClientCommTests.cs  ConnectionHandlerTests.cs  MsgService.CommunicationUtils.Test.csproj  MsgStoreTests.cs  SubscriberMessageListsTests.cs  app.config  packages.config
MessagingService/source/CSharp/Tests/CommunicationUtils.Test/Properties/: AssemblyInfo.cs
MessagingService/source/CSharp/Tests/TestApp/: MsgService.TestApp.csproj  Program.cs  SubscriberForm.Designer.cs  SubscriberForm.cs  packages.config
MessagingService/source/CSharp/Tests/TestApp/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
MessagingService/source/Product/CommonMessages/: CMakeLists.txt  CommonMessages.pb.cc  CommonMessages.pb.h  Message.cpp  MessageUtils.cpp  stdafx.h
MessagingService/source/Product/CommonMessages/include/: ClientTypes.h  Message.h  MessageUtils.h  SubscriptionParams.h
MessagingService/source/Product/CommunicationUtils/: CMakeLists.txt  ClientComm.cpp  CommHandler.cpp  ContextHandler.cpp  ISubscriberMessageLists.h  SubscriberMessageLists.cpp  SubscriberMessageLists.h  stdafx.h
MessagingService/source/Product/CommunicationUtils/include/: ClientComm.h  CommHandler.h  CommHandlerSignals.h  CommStatusDefs.h  ContextHandler.h  IClientComm.h  ICommHandler.h  IContextHandler.h  IncludeBoostASIO.h
MessagingService/source/Product/MessageThreads/: CMakeLists.txt  ClientManager.cpp  ClientMsgHandler.cpp  ConnectionHandler.cpp  SubscriptionHandler.cpp  stdafx.h
MessagingService/source/Product/MessageThreads/include/: ClientManager.h  ClientMsgHandler.h  ConnectionHandler.h  SubscriptionHandler.h
MessagingService/source/Product/MessagingService/: CMakeLists.txt  main.cpp  stdafx.h
MessagingService/source/Tests/: CMakeLists.txt
MessagingService/source/Tests/CommonMessages_Test/: CMakeLists.txt  MessageTests.cpp  MessageUtilsTests.cpp  main.cpp
MessagingService/source/Tests/CommunicationUtils_Test/: CMakeLists.txt  ClientCommTests.cpp  main.cpp
MessagingService/source/Tests/MessageThreads_Test/: CMakeLists.txt  SubscriptionHandlerTests.cpp  main.cpp
MessagingService/source/Tests/TestApp/: CMakeLists.txt  TestClientThread.cpp  TestClientThread.h  main.cpp
MessagingService/source/Tests/_Mocks/: ClientCommMock.h  ClientMsgHandlerMock.h  ContextHandlerMock.h  SubscriberMessageListsMock.h  WorkerThreadMock.h  socketMock.h
MessagingService/source/_ProtoFiles/: CommonMessages.proto
