CMAKE_MINIMUM_REQUIRED(VERSION 3.21)

# !!! Set up the compiler to use, first (i.e. before the PROJECT() call.)
if (UNIX)
   # Cross compiling locations.
   SET(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
   SET(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
   SET(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
   SET(CMAKE_C_COMPILER "$ENV{CROSS_COMPILE_FULL}gcc")
   SET(CMAKE_CXX_COMPILER "$ENV{CROSS_COMPILE_FULL}g++")
   SET(CMAKE_FIND_ROOT_PATH "$ENV{CROSS_COMPILE_FULL_HOST}")
else()
   #These will be added %PATH% in VS Debugging Environment by project.vcxproj.user.in
   SET(WIN_ADD_TO_PATH_DEBUG "$ENV{COMMON_DEBUG_OUT_HOME};$ENV{COMMON_THIRDPARTY_LIB_PATH_DEBUG}" )
   SET(WIN_ADD_TO_PATH_RELEASE "$ENV{COMMON_RELEASE_OUT_HOME};$ENV{COMMON_THIRDPARTY_LIB_PATH_RELEASE}" )
endif()

# The project will use the compiler specified above (or the default compiler for Windows.)
PROJECT(Common)

# First for the generic no-config case (e.g. Linux)
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY $ENV{COMMON_RELEASE_OUT_HOME} )
set( CMAKE_LIBRARY_OUTPUT_DIRECTORY $ENV{COMMON_RELEASE_OUT_HOME} )
set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY $ENV{COMMON_RELEASE_OUT_HOME}/lib )
set( CMAKE_PDB_OUTPUT_DIRECTORY $ENV{COMMON_RELEASE_OUT_HOME} )

# Second, for multi-config builds (e.g. MSVC)
foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
    string( TOUPPER ${OUTPUTCONFIG} U_OUTPUTCONFIG )
    set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_${U_OUTPUTCONFIG} $ENV{COMMON_OUTPUT_PREFIX}/${OUTPUTCONFIG} )
    set( CMAKE_LIBRARY_OUTPUT_DIRECTORY_${U_OUTPUTCONFIG} $ENV{COMMON_OUTPUT_PREFIX}/${OUTPUTCONFIG} )
    set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${U_OUTPUTCONFIG} $ENV{COMMON_OUTPUT_PREFIX}/${OUTPUTCONFIG}/lib )
    set( CMAKE_PDB_OUTPUT_DIRECTORY_${U_OUTPUTCONFIG} $ENV{COMMON_OUTPUT_PREFIX}/${OUTPUTCONFIG} )
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )

SET(COMMON_SRC_HOME "$ENV{COMMON_SRC_HOME}")
ADD_SUBDIRECTORY("${COMMON_SRC_HOME}")

