CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

# !!! Set up the compiler to use, first (i.e. before the PROJECT() call.)
if (UNIX)
   # Cross compiling locations.
   SET(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
   SET(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
   SET(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
   SET(CMAKE_C_COMPILER "$ENV{CROSS_COMPILE_FULL}gcc")
   SET(CMAKE_CXX_COMPILER "$ENV{CROSS_COMPILE_FULL}g++")
   SET(CMAKE_FIND_ROOT_PATH "$ENV{CROSS_COMPILE_FULL_HOST}")
else()
   #These will be added %PATH% in VS Debugging Environment by project.vcxproj.user.in
   SET(WIN_ADD_TO_PATH_DEBUG "$ENV{APP_DEBUG_OUT_HOME};$ENV{COMMON_DEBUG_OUT_HOME};$ENV{COMMON_THIRDPARTY_LIB_PATH_DEBUG}" )
   SET(WIN_ADD_TO_PATH_RELEASE "$ENV{APP_RELEASE_OUT_HOME};$ENV{COMMON_RELEASE_OUT_HOME};$ENV{COMMON_THIRDPARTY_LIB_PATH_RELEASE}" )
endif()

# The project will use the compiler specified above (or the default compiler for Windows.)
PROJECT(MessagingService)

# First for the generic no-config case (Linux)
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY $ENV{APP_RELEASE_OUT_HOME} )
set( CMAKE_LIBRARY_OUTPUT_DIRECTORY $ENV{APP_RELEASE_OUT_HOME} )
set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY $ENV{APP_RELEASE_OUT_HOME}/lib )
set( CMAKE_PDB_OUTPUT_DIRECTORY $ENV{APP_RELEASE_OUT_HOME} )

# Second, for multi-config builds (e.g. msvc)
foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
    string( TOUPPER ${OUTPUTCONFIG} U_OUTPUTCONFIG )
    set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_${U_OUTPUTCONFIG} $ENV{APP_OUTPUT_PREFIX}${OUTPUTCONFIG}/$ENV{TARGET_NAME} )
    set( CMAKE_LIBRARY_OUTPUT_DIRECTORY_${U_OUTPUTCONFIG} $ENV{APP_OUTPUT_PREFIX}${OUTPUTCONFIG}/$ENV{TARGET_NAME}/lib )
    set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${U_OUTPUTCONFIG} $ENV{APP_OUTPUT_PREFIX}${OUTPUTCONFIG}/$ENV{TARGET_NAME}/lib )
    set( CMAKE_PDB_OUTPUT_DIRECTORY_${U_OUTPUTCONFIG} $ENV{APP_OUTPUT_PREFIX}${OUTPUTCONFIG}/$ENV{TARGET_NAME} )
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )


# If you accidentally forget to define these, CMake will recursively create subdirectories over and over and over...
if(DEFINED ENV{COMMON_SRC_HOME})
   SET(COMMON_SRC_HOME "$ENV{COMMON_SRC_HOME}")
   ADD_SUBDIRECTORY("${COMMON_SRC_HOME}" "${CMAKE_CURRENT_BINARY_DIR}/Common")
endif()

SET(APP_SRC_HOME "$ENV{APP_SRC_HOME}")
ADD_SUBDIRECTORY("${APP_SRC_HOME}")
