# cmake file for building the CommonUtils library.
SET(CUR_NAME CommonUtils)
SET(CUR_PROJECT_NAME "Matrix.Common.${CUR_NAME}")
SET(PROJECT_HOME_DIR "${COMMON_PRODUCT_HOME}/${CUR_NAME}")

INCLUDE_DIRECTORIES("${PROJECT_HOME_DIR}/include")

FILE(GLOB RESOURCES "${PROJECT_HOME_DIR}/*.rc")
SOURCE_GROUP("Resources" FILES ${RESOURCES})

FILE(GLOB CUR_PROJECT_FILES "${PROJECT_HOME_DIR}/*.cpp" "${PROJECT_HOME_DIR}/*.h" "${PROJECT_HOME_DIR}/include/*.h" ${RESOURCES})

ADD_LIBRARY(${CUR_PROJECT_NAME} SHARED ${CUR_PROJECT_FILES})

TARGET_LINK_LIBRARIES(${CUR_PROJECT_NAME})

if(UNIX)
   find_package(Threads REQUIRED)
#all the --Wl... is required for statically linking pthreads.  
#   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -Wl,--whole-archive -lpthread -Wl,--no-whole-archive")
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
   TARGET_LINK_LIBRARIES(${CUR_PROJECT_NAME} pthread)
endif()

# Set Windows-specific compiler flags.
# Linker flags used to generate pdb files
if(MSVC)
   SET(USER_FILE "${CMAKE_CURRENT_BINARY_DIR}/${CUR_PROJECT_NAME}.vcxproj.user")
   if(NOT EXISTS "${USER_FILE}")
      CONFIGURE_FILE($ENV{COMMON_SRC_HOME}//project.vcxproj.user.in ${USER_FILE} @ONLY)
   endif()
   TARGET_LINK_LIBRARIES(${CUR_PROJECT_NAME} Ws2_32 Shlwapi)
   ADD_DEFINITIONS(-DUNICODE -D_UNICODE -D_WINDLL)
  
   SET_PROPERTY(TARGET ${CUR_PROJECT_NAME} PROPERTY PROJECT_LABEL "Common.${CUR_NAME}") #name of vcproj
   SET_TARGET_PROPERTIES(${CUR_PROJECT_NAME} PROPERTIES DEFINE_SYMBOL ${CUR_NAME}_EXPORTS)
   SET_TARGET_PROPERTIES(${CUR_PROJECT_NAME} PROPERTIES LINK_FLAGS_RELEASE ${MSWIN_LINK_FLAGS_RELEASE} )
   SET_TARGET_PROPERTIES(${CUR_PROJECT_NAME} PROPERTIES FOLDER ${COMMON_VS_SUBFOLDER_UTILS})

endif()
