# cmake file for building the Logger boost logging library.
SET(CUR_NAME Logger)
SET(CUR_PROJECT_NAME "Matrix.Common.${CUR_NAME}")
SET(PROJECT_HOME_DIR "${COMMON_PRODUCT_HOME}/${CUR_NAME}")
#set(CMAKE_VERBOSE_MAKEFILE ON)
#set(CMAKE_SHARED_LINKER_FLAGS "-Wl,--no-undefined")

INCLUDE_DIRECTORIES("${PROJECT_HOME_DIR}/include")

FILE(GLOB CUR_PROJECT_FILES 
         "${PROJECT_HOME_DIR}/*.cpp" 
         "${PROJECT_HOME_DIR}/*.h" 
         "${PROJECT_HOME_DIR}/include/*.h" )
ADD_LIBRARY(${CUR_PROJECT_NAME} SHARED ${CUR_PROJECT_FILES})

if(UNIX)
   SET(GOOGLETEST_COMPILE_FLAG "-Wextra -pthread")
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GOOGLETEST_COMPILE_FLAG}")
endif()

TARGET_LINK_LIBRARIES(${CUR_PROJECT_NAME}
   debug ${BOOST_LOG_DEBUG_LIB}        optimized ${BOOST_LOG_RELEASE_LIB}
   debug ${BOOST_FILESYSTEM_DEBUG_LIB} optimized ${BOOST_FILESYSTEM_RELEASE_LIB}
   debug ${BOOST_DATE_TIME_DEBUG_LIB}  optimized ${BOOST_DATE_TIME_RELEASE_LIB}
   debug ${BOOST_SYSTEM_DEBUG_LIB}     optimized ${BOOST_SYSTEM_RELEASE_LIB}
)

# Set Windows-specific compiler flags.
# Linker flags used to generate pdb files
if(MSVC)
   SET(USER_FILE "${CMAKE_CURRENT_BINARY_DIR}/${CUR_PROJECT_NAME}.vcxproj.user")
   if(NOT EXISTS "${USER_FILE}")
      CONFIGURE_FILE($ENV{COMMON_SRC_HOME}//project.vcxproj.user.in ${USER_FILE} @ONLY)
   endif()
   
   #not sure why Windows needs these boost libraries when Linux does not
   TARGET_LINK_LIBRARIES(${CUR_PROJECT_NAME} Ws2_32
      debug ${BOOST_ATOMIC_DEBUG_LIB}     optimized ${BOOST_ATOMIC_RELEASE_LIB}
      debug ${BOOST_CHRONO_DEBUG_LIB}     optimized ${BOOST_CHRONO_RELEASE_LIB}
      debug ${BOOST_THREAD_DEBUG_LIB}     optimized ${BOOST_THREAD_RELEASE_LIB}
   )

   SET_PROPERTY(TARGET ${CUR_PROJECT_NAME} PROPERTY PROJECT_LABEL "Common.${CUR_NAME}") #name of vcproj
   SET_TARGET_PROPERTIES(${CUR_PROJECT_NAME} PROPERTIES DEFINE_SYMBOL ${CUR_NAME}_EXPORTS)
   SET_TARGET_PROPERTIES(${CUR_PROJECT_NAME} PROPERTIES LINK_FLAGS_RELEASE ${MSWIN_LINK_FLAGS_RELEASE} )
   SET_TARGET_PROPERTIES(${CUR_PROJECT_NAME} PROPERTIES FOLDER ${COMMON_VS_SUBFOLDER_UTILS})
endif()
