# cmake file for building the Logger_Test executable.
SET(CUR_NAME Logger_Test)
SET(CUR_PROJECT_NAME "${CUR_NAME}")
SET(PROJECT_HOME_DIR "${COMMON_TEST_HOME}/${CUR_NAME}")

INCLUDE_DIRECTORIES("${COMMON_PRODUCT_HOME}/Logger/include")

INCLUDE_DIRECTORIES(SYSTEM "${COMMON_THIRDPARTY_HOME}/GoogleTest/include")

FILE(GLOB CUR_PROJECT_FILES "${PROJECT_HOME_DIR}/*.cpp" "${PROJECT_HOME_DIR}/*.h")

if(UNIX)
   SET(GOOGLETEST_COMPILE_FLAG "-Wextra -pthread")
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GOOGLETEST_COMPILE_FLAG}")
endif()

ADD_EXECUTABLE("${CUR_PROJECT_NAME}" ${CUR_PROJECT_FILES})

TARGET_LINK_LIBRARIES(${CUR_PROJECT_NAME} Matrix.Common.Logger
   debug ${BOOST_LOG_DEBUG_LIB}        optimized ${BOOST_LOG_RELEASE_LIB}
   debug ${BOOST_FILESYSTEM_DEBUG_LIB} optimized ${BOOST_FILESYSTEM_RELEASE_LIB}
   debug ${BOOST_DATE_TIME_DEBUG_LIB}  optimized ${BOOST_DATE_TIME_RELEASE_LIB}
   debug ${BOOST_SYSTEM_DEBUG_LIB}     optimized ${BOOST_SYSTEM_RELEASE_LIB}
   debug ${GTEST_DEBUG_LIB}            optimized ${GTEST_RELEASE_LIB}
)

# Set Windows-specific compiler flags.
if(MSVC)
   SET(USER_FILE "${CMAKE_CURRENT_BINARY_DIR}/${CUR_PROJECT_NAME}.vcxproj.user")
   if(NOT EXISTS "${USER_FILE}")
      CONFIGURE_FILE($ENV{COMMON_SRC_HOME}//project.vcxproj.user.in ${USER_FILE} @ONLY)
   endif()
   ADD_DEFINITIONS(-DUNICODE -D_UNICODE)
   
   SET_PROPERTY(TARGET ${CUR_PROJECT_NAME} PROPERTY PROJECT_LABEL "Common.${CUR_NAME}") #name of vcproj
   SET_TARGET_PROPERTIES("${CUR_PROJECT_NAME}" PROPERTIES FOLDER "${COMMON_VS_SUBFOLDER_UTILS}/Tests")
endif()

