# cmake file for building the CommonMessages library.
SET(CUR_NAME CommonMessages)
SET(CUR_PROJECT_NAME "Matrix.MsgService.${CUR_NAME}")
SET(PROJECT_HOME_DIR "${APP_PRODUCT_HOME}/${CUR_NAME}")

INCLUDE_DIRECTORIES("${PROJECT_HOME_DIR}/include")
INCLUDE_DIRECTORIES("${APP_PRODUCT_HOME}/CommonMessages/include")

INCLUDE_DIRECTORIES("${COMMON_PRODUCT_HOME}/CommonUtils/include")
INCLUDE_DIRECTORIES(SYSTEM "${COMMON_THIRDPARTY_HOME}/protobuf")

FILE(GLOB RESOURCES "${PROJECT_HOME_DIR}/*.rc")
SOURCE_GROUP("Resources" FILES ${RESOURCES})

FILE(GLOB CUR_PROJECT_FILES "${PROJECT_HOME_DIR}/*.cc" "${PROJECT_HOME_DIR}/*.cpp" "${PROJECT_HOME_DIR}/*.h" "${PROJECT_HOME_DIR}/include/*.h" ${RESOURCES})

ADD_LIBRARY(${CUR_PROJECT_NAME} SHARED ${CUR_PROJECT_FILES})

TARGET_LINK_LIBRARIES(${CUR_PROJECT_NAME} Matrix.Common.CommonUtils
   debug ${PROTOBUF_DEBUG_LIB}   optimized ${PROTOBUF_RELEASE_LIB}
)

# Set Windows-specific compiler flags.
# Linker flags used to generate pdb files
if(MSVC)
   SET(USER_FILE "${CMAKE_CURRENT_BINARY_DIR}/${CUR_PROJECT_NAME}.vcxproj.user")
   if(NOT EXISTS "${USER_FILE}")
      CONFIGURE_FILE($ENV{COMMON_SRC_HOME}//project.vcxproj.user.in ${USER_FILE} @ONLY)
   endif()
   TARGET_LINK_LIBRARIES(${CUR_PROJECT_NAME} Ws2_32 Shlwapi)
   ADD_DEFINITIONS(-DUNICODE -D_UNICODE -D_WINDLL)
   
   SET_PROPERTY(TARGET ${CUR_PROJECT_NAME} PROPERTY PROJECT_LABEL "MsgService.${CUR_NAME}") #name of vcproj
   SET_TARGET_PROPERTIES(${CUR_PROJECT_NAME} PROPERTIES DEFINE_SYMBOL ${CUR_NAME}_EXPORTS)
   SET_TARGET_PROPERTIES(${CUR_PROJECT_NAME} PROPERTIES LINK_FLAGS_RELEASE ${MSWIN_LINK_FLAGS_RELEASE} )
   SET_TARGET_PROPERTIES(${CUR_PROJECT_NAME} PROPERTIES FOLDER ${APP_VS_SUBFOLDER_MESSAGINGSERVICE})
endif()
