# cmake file for building the MessagingService application.
SET(CUR_PROJECT_NAME MessagingService)
SET(PROJECT_HOME_DIR "${APP_PRODUCT_HOME}/${CUR_PROJECT_NAME}")

INCLUDE_DIRECTORIES("${APP_PRODUCT_HOME}/MessageThreads/include")
INCLUDE_DIRECTORIES("${APP_PRODUCT_HOME}/CommonMessages/include")
INCLUDE_DIRECTORIES("${APP_PRODUCT_HOME}/CommunicationUtils/include")

INCLUDE_DIRECTORIES("${COMMON_PRODUCT_HOME}/CommonUtils/include")
INCLUDE_DIRECTORIES("${COMMON_PRODUCT_HOME}/Logger/include")

INCLUDE_DIRECTORIES(SYSTEM "${COMMON_THIRDPARTY_HOME}/protobuf")

FILE(GLOB RESOURCES "${PROJECT_HOME_DIR}/*.rc")
SOURCE_GROUP("Resources" FILES ${RESOURCES})

FILE(GLOB CUR_PROJECT_FILES "${PROJECT_HOME_DIR}/*.cpp" "${PROJECT_HOME_DIR}/*.h" ${RESOURCES})
ADD_EXECUTABLE(${CUR_PROJECT_NAME} ${CUR_PROJECT_FILES})

TARGET_LINK_LIBRARIES(${CUR_PROJECT_NAME} Matrix.MsgService.MessageThreads Matrix.MsgService.CommunicationUtils 
		Matrix.MsgService.CommonMessages Matrix.Common.Logger Matrix.Common.CommonUtils
   debug ${PROTOBUF_DEBUG_LIB}   optimized ${PROTOBUF_RELEASE_LIB}
   debug ${BOOST_DATE_TIME_DEBUG_LIB} optimized ${BOOST_DATE_TIME_RELEASE_LIB}
)
IF($ENV{USING_SSL})
   INCLUDE_DIRECTORIES(SYSTEM "${COMMON_THIRDPARTY_HOME}/OpenSSL/include")
   TARGET_LINK_LIBRARIES(${CUR_PROJECT_NAME}
      debug ${OPENSSL_DEBUG_LIB} optimized ${OPENSSL_RELEASE_LIB}
      debug ${SSLCRYPTO_DEBUG_LIB} optimized ${SSLCRYPTO_RELEASE_LIB}  
   )
endif()

# Set Windows-specific compiler flags.
# Linker flags used to generate pdb files
if(MSVC)
   SET(USER_FILE "${CMAKE_CURRENT_BINARY_DIR}/${CUR_PROJECT_NAME}.vcxproj.user")
   if(NOT EXISTS "${USER_FILE}")
      CONFIGURE_FILE($ENV{COMMON_SRC_HOME}//project.vcxproj.user.in ${USER_FILE} @ONLY)
   endif()
   TARGET_LINK_LIBRARIES(${CUR_PROJECT_NAME} Ws2_32 Shlwapi)
   ADD_DEFINITIONS(-DUNICODE -D_UNICODE -D_WINDLL)
   
   SET_TARGET_PROPERTIES(${CUR_PROJECT_NAME} PROPERTIES LINK_FLAGS_RELEASE ${MSWIN_LINK_FLAGS_RELEASE} )
   SET_TARGET_PROPERTIES(${CUR_PROJECT_NAME} PROPERTIES FOLDER ${APP_VS_SUBFOLDER_MESSAGINGSERVICE})
endif()
