# cmake file for building the MessageThreads_Test executable.
SET(CUR_NAME MessageThreads_Test)
SET(CUR_PROJECT_NAME "${CUR_NAME}")
SET(PROJECT_HOME_DIR "${APP_TEST_HOME}/${CUR_NAME}")

INCLUDE_DIRECTORIES("${APP_PRODUCT_HOME}/MessageThreads/include")
INCLUDE_DIRECTORIES("${APP_PRODUCT_HOME}/CommunicationUtils/include")
INCLUDE_DIRECTORIES("${APP_PRODUCT_HOME}/CommonMessages/include")

INCLUDE_DIRECTORIES("${COMMON_PRODUCT_HOME}/CommonUtils/include")
INCLUDE_DIRECTORIES("${COMMON_PRODUCT_HOME}/Logger/include")
INCLUDE_DIRECTORIES("${APP_TEST_HOME}/_Mocks")

INCLUDE_DIRECTORIES(SYSTEM "${COMMON_THIRDPARTY_HOME}/protobuf")
INCLUDE_DIRECTORIES(SYSTEM "${COMMON_THIRDPARTY_HOME}/GoogleTest/include")

FILE(GLOB CUR_PROJECT_FILES "${PROJECT_HOME_DIR}/*.cpp" "${PROJECT_HOME_DIR}/*.h" "${APP_TEST_HOME}/_Mocks/ClientMsgHandlerMock.h")

if(UNIX)
   SET(GOOGLETEST_COMPILE_FLAG "-Wextra -pthread")
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GOOGLETEST_COMPILE_FLAG}")
endif()

ADD_EXECUTABLE(${CUR_PROJECT_NAME} ${CUR_PROJECT_FILES})

TARGET_LINK_LIBRARIES(${CUR_PROJECT_NAME} Matrix.MsgService.MessageThreads Matrix.Common.CommonUtils Matrix.Common.Logger
		Matrix.MsgService.CommonMessages Matrix.MsgService.CommunicationUtils
   debug ${PROTOBUF_DEBUG_LIB}  optimized ${PROTOBUF_RELEASE_LIB}
   debug ${BOOST_SYSTEM_DEBUG_LIB} optimized ${BOOST_SYSTEM_RELEASE_LIB}
   debug ${GTEST_DEBUG_LIB} optimized ${GTEST_RELEASE_LIB}
   debug ${GMOCK_DEBUG_LIB} optimized ${GMOCK_RELEASE_LIB}
)
IF($ENV{USING_SSL})
   INCLUDE_DIRECTORIES(SYSTEM "${COMMON_THIRDPARTY_HOME}/OpenSSL/include")
   TARGET_LINK_LIBRARIES(${CUR_PROJECT_NAME}
      debug ${BOOST_DATE_TIME_DEBUG_LIB} optimized ${BOOST_DATE_TIME_RELEASE_LIB}
      debug ${OPENSSL_DEBUG_LIB} optimized ${OPENSSL_RELEASE_LIB}
      debug ${SSLCRYPTO_DEBUG_LIB} optimized ${SSLCRYPTO_RELEASE_LIB}  
   )
endif()

# Set Windows-specific compiler flags.
if(MSVC)
   SET(USER_FILE "${CMAKE_CURRENT_BINARY_DIR}/${CUR_PROJECT_NAME}.vcxproj.user")
   if(NOT EXISTS "${USER_FILE}")
      CONFIGURE_FILE($ENV{COMMON_SRC_HOME}//project.vcxproj.user.in ${USER_FILE} @ONLY)
   endif()
   ADD_DEFINITIONS(-DUNICODE -D_UNICODE)
   
   SET_PROPERTY(TARGET ${CUR_PROJECT_NAME} PROPERTY PROJECT_LABEL "MsgService.${CUR_NAME}") #name of vcproj
   SET_TARGET_PROPERTIES(${CUR_PROJECT_NAME} PROPERTIES FOLDER ${APP_VS_SUBFOLDER_MESSAGINGSERVICE}/Tests)
endif()

